[package]
name = "as3910"
version = "0.1.0"
authors = ["Reinis Muiznieks <muiznieks.reinis@gmail.com>"]
edition = "2021"
description = "A platform agnostic driver to interface the AS3910 (RFID reader/writer)"
license = "MIT OR Apache-2.0"
keywords = ["rfid", "as3910", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = { package = "embedded-hal", version = "1.0.0-alpha.8", optional = true }
embedded_hal_2_7 = { package = "embedded-hal", version = "0.2.7", optional = true }

[features]
default = ["hal_0_2"]
hal_0_2 = ["embedded_hal_2_7"]
hal_1_0 = ["embedded-hal"]
